--- a/templates/add.html
+++ b/templates/add.html
@@ -10,15 +10,14 @@
     
     {% load static %}
 
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+
     <style>
         .navbar.navbar-expand-sm.bg-transparent.navbar-dark.justify-content-center{
             font-size: smaller;
             font-family: Verdana;
         }
 
-        body{
-            background-color: rgba(10, 10, 10, 100);
-          }
 
         .thumb {
             width: 35px; 
