--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1.0">
     
+    <!-- BootStrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
@@ -18,26 +20,12 @@
 
     {% load static %}
 
+    <!-- Standard style between all webpages -->
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+
+    <!-- Styles Unique to this webpage -->
     <style>
-        .blurb {
-            text-align: center;
-            color: whitesmoke;
-            font-family: 'Nunito', sans-serif;
-        }
-        body {
-            background-color: rgb(59, 59, 65);
-        }
-        .container{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .header_main {
-            text-align: center;
-            font-family: 'Nunito', sans-serif;
-            font-weight: normal;
-            color: whitesmoke;
-        }
+
         .headshot {
             width: 250px;
             border-radius: 125px; 
@@ -48,26 +36,8 @@
         .headshot_section {
             background-color: rgba(194, 108, 130, 0.1);
         }
-        hr {
-            background-color: whitesmoke;
-            opacity: 0.7;
-        }
-        .links{
-            text-align: center;
-            font-family: 'Nunito', sans-serif;
-            color: whitesmoke;
-            opacity: 1;
-        }
-        .navbar.navbar-expand-sm.bg-transparent.navbar-dark.justify-content-center{
-            /* font-size: smaller; */
-            font-family: 'Nunito', sans-serif;
-        }
-        .thumb {
-            width: 35px; 
-            float: left;
-            margin-left: 10px;
-            align-items: center;
-        }  
+
+
     </style>
     
     <title>Home - Curtis Smith, P.G.</title>
@@ -78,11 +48,11 @@
 
     <br>
 
-    <h1 class="header_main">
+    <h1 class="cs_header">
         CURTIS SMITH, P.G.
     </h1>
 
-    <div>
+    <div class="just_font">
         <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
             <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -111,18 +81,18 @@
 
     <br>
 
-    <div class='container'>
-        <p class="blurb">
+    <div class="centered_items">
+        <p class="centered_text">
         Hi, welcome to my webpage. Take a look at my personal projects, read about my background, or sift through my blog where I talk about creating this website from scratch and my experiences in a data analytics bootcamp.
 
         </p>
     </div>
 
-    <hr>
+    <hr class="footer_hr">
 
-    <p class="blurb">Other places you can find me:</p>
+    <p class="centered_text">Other places you can find me:</p>
 
-    <div class='container'>
+    <div class='centered_items'>
         <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">
             <img class="thumb" alt="linkedin" src="{% static 'images/LI-In-Bug.png' %}"
             title="linkedin">
@@ -135,7 +105,7 @@
 
     <br>
 
-    <p class="blurb">curtis.smith.geo@gmail.com</p>
+    <p class="centered_text">curtis.smith.geo@gmail.com</p>
 
 </body>
 </html>
