more html style updating/streamlining w/ styles.css

--- a/templates/about.html
+++ b/templates/about.html
@@ -113,7 +113,8 @@
 		</h3>
 		<ul class="just_font" style="list-style: none;">
 			<li>
-				Scanning Electron Microscope (SEM) Microtextural Analysis as a Paleoclimate Tool for Fluvial Deposits: A Modern Test - GSA Bulletin
+				Scanning Electron Microscope (SEM) Microtextural Analysis as a Paleoclimate Tool for Fluvial Deposits: 
+				A Modern Test - GSA Bulletin
 				<li>
 				<a href="https://doi.org/10.1130/B31692.1">https://doi.org/10.1130/B31692.1</a>
 				</li>
@@ -138,7 +139,7 @@
 
 	<br>
 
-	<p class="centered_text">curtis.smith.geo@gmail.com</p>
+	<p class="centered_text">email me at:<br>curtis.smith.geo@gmail.com</p>
 
 </body>
 </html>
