--- a/templates/home.html
+++ b/templates/home.html
@@ -83,7 +83,8 @@
 
     <div class="centered_items">
         <p class="centered_text">
-        Hi, welcome to my webpage. Take a look at my personal projects, read about my background, or sift through my blog where I talk about creating this website from scratch and my experiences in a data analytics bootcamp.
+        Hi, welcome to my website. Take a look at my personal projects, read about my background, or sift through my 
+        blog where I talk about creating this website from scratch using Django and my experiences in a data analytics bootcamp.
 
         </p>
     </div>
@@ -105,7 +106,7 @@
 
     <br>
 
-    <p class="centered_text">curtis.smith.geo@gmail.com</p>
+    <p class="centered_text">email me at:<br>curtis.smith.geo@gmail.com</p>
 
 </body>
 </html>
