--- a/templates/projects.html
+++ b/templates/projects.html
@@ -104,28 +104,36 @@
 			</ul>
 		</nav>
 	</div>
-  <br>
+	<br>
 
 	<p class = "centered_text">
 			This page is a list of my projects. Projects are listed in reverse chronological order. 
 			Notes about the projects are included in each link. 
 	</p>
 
-	<br>
+	
 
   	<ul style="list-style: none;">
 		<hr class="short_length">
 		<li><a class="link" href="/chords">Guitar Chord Finder</a></li>
       	<p class="text">
-			For this project, the user inputs the frets for each string of a guitar, and the chord, if any, 
-        	being played will be returned, along with the chord structures for the root note entered. 
+			For this project, the user inputs the frets for each string of a guitar, and the chord name, if any, 
+        	entered will be returned, along with the chord structures for the root note entered. 
       	</p>
+		<p class="text">Tags:
+			<span class="badge badge-pill badge-light">Python</span>
+		</p>
       	<hr class="short_length">
 
 		<li><a class="link" href="/sf_locator">Superfund Site Locator</a></li>
       	<p class="text">
 		  	This project returns a list of EPA Superfind Sites within 50 miles of the 
         	input address.</p>
+		<p class="text">Tags:
+			<span class="badge badge-pill badge-light">Python</span>
+			<span class="badge badge-pill badge-light">Pandas</span>
+			<span class="badge badge-pill badge-light">API</span>
+		</p>
 		<hr class="short_length">
 
 		<li><a class="link" href="/add">Adding Numbers</a></li>
@@ -161,7 +169,7 @@
 
 	<br>
 
-	<p class="centered_text">curtis.smith.geo@gmail.com</p>
+	<p class="centered_text">email me at:<br>curtis.smith.geo@gmail.com</p>
 
 </body>
 </html>
