--- a/templates/blog.html
+++ b/templates/blog.html
@@ -18,63 +18,20 @@
 
     {% load static %}
 
+    <!-- Standard style between all webpages -->
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+
+    <!-- Styles Unique to this webpage -->
+
     <style>
-        .blurb {
-            text-align: center;
-            color: whitesmoke;
-            font-family: 'Nunito', sans-serif;
-        }
-        body {
-            background-color: rgb(59, 59, 65);
-        }
-        .container{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .header_main {
-            text-align: center;
-            font-family: 'Nunito', sans-serif;
-            font-weight: normal;
-            color: whitesmoke;
-        }
-        .headshot {
-            width: 250px;
-            border-radius: 125px; 
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .headshot_section {
-            background-color: rgba(194, 108, 130, 0.1);
-        }
-        hr {
-            background-color: whitesmoke;
-            opacity: 0.7;
-        }
+
         .links{
             text-align: left;
             font-family: 'Nunito', sans-serif;
             color: whitesmoke;
             opacity: 1;
         }
-        .navbar.navbar-expand-sm.bg-transparent.navbar-dark.justify-content-center{
-            /* font-size: smaller; */
-            font-family: 'Nunito', sans-serif;
-        }
-        .text{
-            text-align: left;
-            margin-left: 10px;
-            margin-right: 10px;
-            font-family: 'Nunito', sans-serif;
-            color: whitesmoke;
-        } 
-        .thumb {
-            width: 35px; 
-            float: left;
-            margin-left: 10px;
-            align-items: center;
-        }  
+
     </style>
     
     <title>Blog - Curtis Smith, P.G.</title>
@@ -85,11 +42,11 @@
 
     <br>
 
-    <h1 class="header_main">
+    <h1 class="cs_header">
         CURTIS SMITH, P.G.
     </h1>
 
-    <div>
+    <div class="just_font">
         <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -109,39 +66,38 @@
 
     <br>
 
-    <h3 class = "text">
+    <h3 class = "left_text">
         Blog Posts
     </h3>
 
     <ul style="list-style: none;">
     {% for post in object_list %}
-        <li class = "links"><a href="{% url 'article-detail' post.pk %}">{{ post.title }} </a>- 
-            <small class = "text">
+        <li class = "links"><a href="{% url 'article-detail' post.pk %}">{{ post.title }} </a>-
+            <small class = "left_text">
                 {{ post.date }}
             </small>
-
         </li>
     {% endfor %}
     </ul>
 
-    <hr>
+	<hr class="footer_hr">
 
-    <p class="blurb">Other places you can find me:</p>
-  
-    <div class='container'>
-      <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">
-          <img class="thumb" alt="linkedin" src="{% static 'images/LI-In-Bug.png' %}"
-          title="linkedin">
-      </a>
-      <a href="https://github.com/curtissmith291">
-          <img class="thumb" alt="github" src="{% static 'images/gh.png' %}"
-          title="github">
-      </a>
-    </div>
-  
-    <br>
-  
-    <p class="blurb">curtis.smith.geo@gmail.com</p>
+	<p class="centered_text">Other places you can find me:</p>
+
+	<div class='centered_items'>
+		<a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">
+			<img class="thumb" alt="linkedin" src="{% static 'images/LI-In-Bug.png' %}"
+			title="linkedin">
+		</a>
+		<a href="https://github.com/curtissmith291">
+			<img class="thumb" alt="github" src="{% static 'images/gh.png' %}"
+			title="github">
+		</a>
+	</div>
+
+	<br>
+
+	<p class="centered_text">email me at:<br>curtis.smith.geo@gmail.com</p>
 
 </body>
 </html>
