updated gitignore, html, settings.py

--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,7 @@
 
 	{% load static %}
 
-	<!-- Standard style between all webpages -->
+	<!-- Standard styles between all webpages -->
 	<link rel="stylesheet" href="{% static 'styles.css' %}">
 
 	<!-- Styles Unique to this webpage -->
@@ -126,16 +126,20 @@
 
 	<p class="centered_text">Other places you can find me:</p>
 
-	<div class='centered_items'>
-		<a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">
-			<img class="thumb" alt="linkedin" src="{% static 'images/LI-In-Bug.png' %}"
-			title="linkedin">
-		</a>
-		<a href="https://github.com/curtissmith291">
-			<img class="thumb" alt="github" src="{% static 'images/gh.png' %}"
-			title="github">
-		</a>
-	</div>
+    <div class='centered_items'>
+        <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">
+            <img class="thumb" 
+                alt="linkedin" 
+                src="{% static 'images/LI-In-Bug.png' %}"
+                title="linkedin">
+        </a>
+        <a href="https://github.com/curtissmith291">
+            <img class="thumb" 
+                alt="github" 
+                src="{% static 'images/gh.png' %}"
+                title="github">
+        </a>
+    </div>
 
 	<br>
 
