--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
 
     {% load static %}
 
-    <!-- Standard style between all webpages -->
+    <!-- Standard styles between all webpages -->
     <link rel="stylesheet" href="{% static 'styles.css' %}">
 
     <!-- Styles Unique to this webpage -->
@@ -36,7 +36,6 @@
         .headshot_section {
             background-color: rgba(194, 108, 130, 0.1);
         }
-
 
     </style>
     
@@ -84,8 +83,8 @@
     <div class="centered_items">
         <p class="centered_text">
         Hi, welcome to my website. Take a look at my personal projects, read about my background, or sift through my 
-        blog where I talk about creating this website from scratch using Django and my experiences in a data analytics bootcamp.
-
+        blog where I muse about creating this website from scratch using Django and my experiences in a data analytics 
+        bootcamp.
         </p>
     </div>
 
@@ -95,12 +94,16 @@
 
     <div class='centered_items'>
         <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">
-            <img class="thumb" alt="linkedin" src="{% static 'images/LI-In-Bug.png' %}"
-            title="linkedin">
+            <img class="thumb" 
+                alt="linkedin" 
+                src="{% static 'images/LI-In-Bug.png' %}"
+                title="linkedin">
         </a>
         <a href="https://github.com/curtissmith291">
-            <img class="thumb" alt="github" src="{% static 'images/gh.png' %}"
-            title="github">
+            <img class="thumb" 
+                alt="github" 
+                src="{% static 'images/gh.png' %}"
+                title="github">
         </a>
     </div>
 
