--- a/templates/projects.html
+++ b/templates/projects.html
@@ -45,10 +45,16 @@
 
 		/* Horizontal rules between project entries */
         hr.short_length {
-          border: 0.5px solid whitesmoke;
-          opacity: 0.7;
-          margin-right: 10px;
+			border: 0.5px solid whitesmoke;
+			opacity: 0.7;
+			margin-right: 10px;
         }
+		.test{
+			/* align-items: center; */
+			/* justify-content: center; */
+			margin-left: 20px;
+			margin-right: 20px;
+		}
 
     </style>
     
@@ -90,23 +96,62 @@
 	</p>
 
 	
+	<!-- <div class="test">
+		<ul style="list-style: none;">
+			<hr class="short_length">
+			<li><a class="link" href="/chords">Guitar Chord Finder</a></li>
+			<p class="project_descriptions">
+				For this project, the user inputs the frets for each string of a guitar, and the chord name, if any, 
+				entered will be returned, along with the chord structures for the root note entered. 
+			</p>
+			<p class="project_descriptions">Tags:
+				<span class="badge badge-pill badge-light">Python</span>
+			</p>
+			<hr class="short_length">
 
-  	<ul style="list-style: none;">
+			<li><a class="link" href="/sf_locator">Superfund Site Locator</a></li>
+			<p class="project_descriptions">
+				This project returns a list of EPA Superfind Sites within 50 miles of the 
+				input address.</p>
+			<p class="project_descriptions">Tags:
+				<span class="badge badge-pill badge-light">Python</span>
+				<span class="badge badge-pill badge-light">Pandas</span>
+				<span class="badge badge-pill badge-light">API</span>
+			</p>
+			<hr class="short_length">
+
+			<li><a class="link" href="/add">Adding Numbers</a></li>
+			<p class="project_descriptions">
+				This link is to a webpage that adds two input integers.</p>
+			<hr class="short_length">
+
+			<li><a class="link" href="/square">Number Squared</a></li>
+			<p class="project_descriptions">This link is to a simple webpage that squares an integer the user inputs.</p>
+			<hr class="short_length">
+
+			<li><a class="link" href="/hello">Hello, User</a></li>
+			<p class="project_descriptions"> This link is to a simple webpage that returns your username with a friendly "Hello".</p>
+			
+		</ul>
+	</div> -->
+
+	<div class="test">
+		
 		<hr class="short_length">
-		<li><a class="link" href="/chords">Guitar Chord Finder</a></li>
-      	<p class="project_descriptions">
+		<a class="link" href="/chords">Guitar Chord Finder</a>
+		<p class="project_descriptions">
 			For this project, the user inputs the frets for each string of a guitar, and the chord name, if any, 
-        	entered will be returned, along with the chord structures for the root note entered. 
-      	</p>
+			entered will be returned, along with the chord structures for the root note entered. 
+		</p>
 		<p class="project_descriptions">Tags:
 			<span class="badge badge-pill badge-light">Python</span>
 		</p>
-      	<hr class="short_length">
+		<hr class="short_length">
 
-		<li><a class="link" href="/sf_locator">Superfund Site Locator</a></li>
-      	<p class="project_descriptions">
-		  	This project returns a list of EPA Superfind Sites within 50 miles of the 
-        	input address.</p>
+		<a class="link" href="/sf_locator">Superfund Site Locator</a>
+		<p class="project_descriptions">
+			This project returns a list of EPA Superfind Sites within 50 miles of the 
+			input address.</p>
 		<p class="project_descriptions">Tags:
 			<span class="badge badge-pill badge-light">Python</span>
 			<span class="badge badge-pill badge-light">Pandas</span>
@@ -114,20 +159,20 @@
 		</p>
 		<hr class="short_length">
 
-		<li><a class="link" href="/add">Adding Numbers</a></li>
-      	<p class="project_descriptions">
+		<a class="link" href="/add">Adding Numbers</a>
+		<p class="project_descriptions">
 			This link is to a webpage that adds two input integers.</p>
-    	<hr class="short_length">
+		<hr class="short_length">
 
-		<li><a class="link" href="/square">Number Squared</a></li>
-      	<p class="project_descriptions">This link is to a simple webpage that squares an integer the user inputs.</p>
-    	<hr class="short_length">
+		<a class="link" href="/square">Number Squared</a>
+		<p class="project_descriptions">This link is to a simple webpage that squares an integer the user inputs.</p>
+		<hr class="short_length">
 
-		<li><a class="link" href="/hello">Hello, User</a></li>
-        <p class="project_descriptions"> This link is to a simple webpage that returns your username with a friendly "Hello".</p>
-        
-	</ul>
-
+		<a class="link" href="/hello">Hello, User</a>
+		<p class="project_descriptions"> This link is to a simple webpage that returns your username with a friendly "Hello".</p>
+		
+		
+	</div>
 	<br>
 
 	<hr class="footer_hr">
