--- a/templates/home.html
+++ b/templates/home.html
@@ -36,6 +36,8 @@
         .headshot_section {
             background-color: rgba(194, 108, 130, 0.1);
         }
+        #test {
+        }
 
     </style>
     
@@ -51,23 +53,31 @@
         CURTIS SMITH, P.G.
     </h1>
 
+    <!-- <div class="container">
+        <hr class="footer_hr">
+    </div> -->
+
     <div class="just_font">
         <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/home">Home</a>
+                    <a class="nav-link" href="/home">home</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="/about">about</a> -->
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
+                    <a class="nav-link" href="/projects">projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/blog">Blog</a>
+                    <a class="nav-link" href="/blog">the blog</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/projects">Projects</a>
             </ul>
         </nav>
     </div>
+
+
+
 
     <div class="headshot_section">
         <br>
@@ -78,38 +88,51 @@
         <br>
     </div>
 
-    <br>
+    <div class="container">
+        <hr class="footer_hr">
+    </div>
 
-    <div class="centered_items">
+    <div class="container">
         <p class="centered_text">
-        Hi, welcome to my website. Take a look at my personal projects, read about my background, or sift through my 
+        Hi, welcome to my website. Take a look at my personal programming and data-analysis projects, read about my background, or sift through my 
         blog where I muse about creating this website from scratch using Django and my experiences in a data analytics 
         bootcamp.
         </p>
     </div>
 
-    <hr class="footer_hr">
-
-    <p class="centered_text">Other places you can find me:</p>
-
-    <div class='centered_items'>
-        <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">
-            <img class="thumb" 
-                alt="linkedin" 
-                src="{% static 'images/LI-In-Bug.png' %}"
-                title="linkedin">
-        </a>
-        <a href="https://github.com/curtissmith291">
-            <img class="thumb" 
-                alt="github" 
-                src="{% static 'images/gh.png' %}"
-                title="github">
-        </a>
+    <div class="container">
+        <hr class="footer_hr">
     </div>
 
     <br>
 
-    <p class="centered_text">email me at:<br>curtis.smith.geo@gmail.com</p>
+    <div class="container" id="test">
+        <div class="row">
+            <div class="col">
+                <h5 class="just_font">
+                    About Me
+                </h5>
+                <p class="just_font">
+                    I'm Professional Geologist 
+                </p>
+            </div>
+            <div class="col">
+
+            </div>
+        </div>
+    </div>
+
+    <hr class="footer_hr">
+
+
+    <div class="centered_text">
+        <p> 
+        <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+            ||    
+        <a href="https://github.com/curtissmith291">GitHub</a>
+        </p>
+        <p>curtis.smith.geo@gmail.com</p>
+    </div>
 
 </body>
 </html>
